--- a/web-app/src/main/resources/static/index.html
+++ b/web-app/src/main/resources/static/index.html
@@ -22,7 +22,7 @@
     <div class="site-wrapper-inner">
         <div class="cover-container">
             <div class="inner cover">
-                <h1 class="cover-heading">Welcome to Movie DB on Azure</h1>
+                <h1 class="cover-heading">Welcome to Movie DB on Azure!!!</h1>
                 <p class="lead">
                     <a class="btn btn-lg btn-success" href="/movies">Top Rated Movies</a>
                 </p>
